# pose_estimation_models

./: .gitignore  .gitmodules  README.md  hloc_known_param.ipynb  main.py  main_estimator.py  main_matcher.py  pyproject.toml  requirements.txt
estimator/: __init__.py  utils.py  viz.py
estimator/models/: base_estimator.py  duster.py  hloc.py  master.py  reloc3r.py  vpr.py
matching/: __init__.py  base_matcher.py  duster.py  efficient_loftr.py  master.py  matchformer.py  mickey.py  utils.py
matching/im_models/: base_matcher.py  duster.py  master.py
test/: batch_main_estimator.py  hloc_known_param.ipynb
